@@ -162,6 +162,7 @@ $defaultTimezone = 'Asia/Tokyo';
 //    'username' => 'username',
 //    'password' => 'password',
 //);
+$waitAfterMail = 20;  // Wait after send email with smtp server. Unit is Millisecond.
 
 // Sending email features compatibility with INTER-Mediator v5 unless 'template-context' key isn't specified.
 $sendMailCompatibilityMode = true;  // default is true
