@@ -21,6 +21,7 @@ Ver.9 (in development)
 - [INFO] The progress displaying which shows a rounding gear can't operate any elements on the page. Previously it could.
   If you want to operate on the 'gear' display, you could define CSS as like: #_im_progress {pointer-events: none;}.
 - Add dist-docs/container-for-trial directory and files for container.
+- The variable $waitAfterMail in params.php sets the waiting milliseconds every after sending.
 
 Ver.8 (July 22, 2021)
 - [Important] If you see the message which tells the ServiceServer couldn't boot just after installation,
